mongodb-browser/src/front-end/src/components/style.css
.home-page-main-box {
    border: solid 0px black;
    padding: 20px;
    display: flex;
    flex-direction: row;
    margin-top: 10px;
    margin-bottom: 10px;
}

.left-side-bar {
    border: solid 1px rgb(193, 193, 193);
    border-radius: 4px;
    width: 20%;
    padding: 10px;
    margin-right: 15px;
    height: 700px;
}

.right-side-box {
    border: solid 1px rgb(193, 193, 193);
    border-radius: 4px;
    width: 80%;
    padding: 10px;
}

.header-main-box {
    margin-bottom: 30px;
    background-color: rgb(223, 240, 255);
    border-bottom: 2px rgb(121, 193, 255);
    height: 50px;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
}

.footer-main-box {
    margin-top: 30px;
    background-color: rgb(223, 240, 255);
    border-top: 2px rgb(121, 193, 255);
    height: 50px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

